<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dice Roller</string>
    <string name="action_settings">Settings</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="blank"></string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="reset">Reset</string>

</resources>